DUnion.GeneratorTests/TestCases/Valid/CaseStruct.source.cs
using DUnion;

namespace Valid.CaseStruct;

[DUnion]
public readonly partial record struct Union
{
    public struct Case
    {
    }
}