DUnion.GeneratorTests/TestCases/Invalid/UnionEmpty.source.cs
using DUnion;

namespace Invalid.UnionEmpty;

[DUnion]
public readonly partial record struct Union 
{
}